# SmartTouchX

./: .gitignore
4L_Touch_324PB/: 4lt_touch_lock_324pb.atsln
4L_Touch_324PB/4lt_touch_lock_324pb/: 4LT_Touch.componentinfo.xml  4LT_Touch.cproj  main.c
4L_Touch_324PB/4lt_touch_lock_324pb/.atmelstart/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart
4L_Touch_324PB/4lt_touch_lock_324pb/Config/: RTE_Components.h  clock_config.h
4L_Touch_324PB/4lt_touch_lock_324pb/Debug/: 4LT_Touch.elf  4LT_Touch.hex  (+15 more)
BOOTLOADER_V2_F446RE/: .cproject  .mxproject  .project  BOOTLOADER_V2_F446RE Debug.launch  BOOTLOADER_V2_F446RE.ioc
BOOTLOADER_V2_F446RE/Debug/: BOOTLOADER_V2_F446RE.elf  BOOTLOADER_V2_F446RE.list  BOOTLOADER_V2_F446RE.map  makefile  objects.list
ESP32/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32/a2dp_sink/: sdkconfig  sdkconfig.old
ESP32/main/: CMakeLists.txt  esp_app.c
ESP32/main/inc/: ble.h  crc32.h  esp_app.h  flash_cmd.h  gpio.h  http.h  http_server.h  mqtt.h  nvs.h  uart_config.h  update_esp.h  wifi.h
ESP32/main/secret/: mqtt_config.c  mqtt_config.h
ESP32/main/src/: ble.c  crc32.c  flash_cmd.c  gpio.c  http.c  http_server.c  mqtt.c  nvs.c  uart_config.c  update_esp.c  wifi.c
SPI_COM_TO_ST/: .ccsproject  .cproject  .project  main.c
SPI_COM_TO_ST/.launches/: UART_ECHO.launch
SPI_COM_TO_ST/targetConfigs/: Tiva TM4C1230H6PM.ccxml
STM32_DISPLAY_APP/: .cproject  .mxproject  .project  STM32F446RETX_FLASH.ld  STM32_DISPLAY_APP Debug.launch  STM32_DISPLAY_APP.ioc
STM32_DISPLAY_APP/Debug/: STM32_DISPLAY_APP.elf  STM32_DISPLAY_APP.list  STM32_DISPLAY_APP.map  makefile  objects.list  sources.mk
(+281 files in other folders)
